# DSI321-big-data-infrastructure

./: .gitignore  LICENSE  README.md  docker-compose.yml  inspect_container.sh  main.ipynb  main.py  pyproject.toml
frontend/: Dockerfile  requirements.txt  streamlit.py
lakefs/lakefs/metadata/: 000010.vlog  000011.vlog  000012.sst  000013.sst  KEYREGISTRY
make/: Dockerfile.jupyter  Dockerfile.prefectworker  requirements.txt  wait-for-server.sh
pipeline/: deploy.py  extraction.py  prompt_template.py  result_load.py  update.py  x_login.py  x_scrap.py
src/: prefect.yaml
src/data/tag=DSI321/scrapeTime=2025-05-01_13-57/: part.parquet
src/data/tag=ธรรมศาสตร์ช้างเผือก/scrapeTime=2025-05-01_14-13/: part.parquet
src/data/tag=ธรรมศาสตร์ช้างเผือก/scrapeTime=2025-05-01_14-14/: part.parquet
src/data/tag=ธรรมศาสตร์ช้างเผือก/scrapeTime=2025-05-01_14-20/: part.parquet
src/data/tag=ธรรมศาสตร์ช้างเผือก/scrapeTime=2025-05-01_14-36/: part.parquet
src/data/tag=ธรรมศาสตร์ช้างเผือก/scrapeTime=2025-05-01_14-46/: part.parquet
src/frontend/: Dockerfile  streamlit.py
src/jupyter/: faqs.csv  issues.csv  main.ipynb  notebook.ipynb
src/python/: deploy_flow.py  faqs_extraction.py  main.py  notebook.ipynb  prefect.yaml  scraped_tweets.json  streamlit.py  twitter_login.py  twitter_scraping.py  twitter_scraping_cmds.py
