[project]
name = "dsi321-big-data-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "nitter>=0.0.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "selenium>=4.31.0",
]
